--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,22 @@ spring:
     console:
       enabled: true
       path: /h2-ui
+
+example:
+  openapi:
+    dev-url: http://localhost:8080
+    prod-url: https://example.com
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /api-docs
+  packages-to-scan:
+    com.zoola.tutorial.controller
+  swagger-ui:
+    enabled: true
+    filter: true
+    operations-sorter: method
+    path: /swagger-ui
+    tags-sorter: alpha
+    try-it-out-enabled: true
