--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,3 +35,8 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: test
+    - name: Build with Gradle
+      #run: ./gradlew build
+      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      with:
+        arguments: build
